@@ -61,7 +61,9 @@ Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends},
          ${shlibs:Depends}
-Replaces: gstreamer1.0-plugins-bad (<< 1.7.2)
+Conflicts: gstreamer1.0-plugins-ugly-amr (<< 1.11.91)
+Replaces: gstreamer1.0-plugins-bad (<< 1.7.2),
+          gstreamer1.0-plugins-ugly-amr (<< 1.11.91)
 Breaks: gstreamer1.0-plugins-bad (<< 1.7.2)
 XB-GStreamer-Version: ${gstreamer:Version}
 XB-GStreamer-Elements: ${gstreamer:Elements}
@@ -69,7 +71,8 @@ XB-GStreamer-URI-Sources: ${gstreamer:URISources}
 XB-GStreamer-URI-Sinks: ${gstreamer:URISinks}
 XB-GStreamer-Encoders: ${gstreamer:Encoders}
 XB-GStreamer-Decoders: ${gstreamer:Decoders}
-Provides: ${gstreamer:Provides}
+Provides: ${gstreamer:Provides},
+          gstreamer1.0-plugins-ugly-amr
 Description: GStreamer plugins from the "ugly" set
  GStreamer is a streaming media framework, based on graphs of filters
  which operate on media data.  Applications using this library can do
